--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,47 @@
 @charset "UTF-8";
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  background-color: #ffffff;
+  color: #757575;
+}
+
+p,
+a,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0 0;
+}
+
+ul {
+  margin: 0 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* удалення крапочок напроти пунктів списку */
+ul {
+  list-style: none;
+}
+
+.container {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+}
+
 .page-header__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -23,7 +66,6 @@
 .site-menu--current {
   position: relative;
 }
-
 .site-menu--current::after {
   content: "";
   position: absolute;
@@ -34,13 +76,6 @@
   height: 4px;
   border-radius: 2px;
   background-color: #2196f3;
-}
-
-.site-menu__link:hover,
-.site-menu__link:focus {
-  color: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-menu__link {
@@ -56,11 +91,15 @@
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.site-menu__link:hover, .site-menu__link:focus {
+  color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .site-menu__item {
   margin-right: 50px;
 }
-
 .site-menu__item:last-child {
   margin-right: 0;
 }
@@ -110,20 +149,6 @@
   gap: 30px;
 }
 
-.contacts-header__link:hover,
-.contacts-header__link:focus {
-  color: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-header__link:hover .header-contacts-icon,
-.contacts-header__link:focus .header-contacts-icon {
-  fill: #2196f3;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contacts-header__link {
   display: block;
   display: -webkit-box;
@@ -146,6 +171,11 @@
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.contacts-header__link:hover, .contacts-header__link:focus {
+  color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .contacts-header__icon {
   fill: currentColor;
@@ -156,14 +186,6 @@
   margin-bottom: 9px;
 }
 
-.contact-footer__adress:hover,
-.contact-footer__adress:focus {
-  background-color: #2f303a;
-  color: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contact-footer__adress {
   text-decoration: none;
   font-style: normal;
@@ -172,9 +194,7 @@
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contact-footer__link:hover,
-.contact-footer__link:focus {
+.contact-footer__adress:hover, .contact-footer__adress:focus {
   background-color: #2f303a;
   color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -187,6 +207,12 @@
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-footer__link:hover, .contact-footer__link:focus {
+  background-color: #2f303a;
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -207,9 +233,7 @@
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
-
-.promo__button:hover,
-.promo__button:focus {
+.promo__button:hover, .promo__button:focus {
   background-color: #188ce8;
   color: #ffffff;
 }
@@ -242,9 +266,7 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-button__btn:hover,
-.footer-button__btn:focus {
+.footer-button__btn:hover, .footer-button__btn:focus {
   background-color: #188ce8;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -304,6 +326,9 @@
       flex-basis: calc(25% - 30px);
   margin-right: 30px;
 }
+.features-card:last-child {
+  margin-right: 0;
+}
 
 .features__box {
   width: 270px;
@@ -342,10 +367,6 @@
   line-height: 1.71;
 }
 
-.features__card:last-child {
-  margin-right: 0;
-}
-
 .galery__wrapper {
   padding-bottom: 94px;
 }
@@ -356,15 +377,14 @@
   display: -ms-flexbox;
   display: flex;
 }
+.galery__item:last-child {
+  margin-right: 0;
+}
 
 .galery__icon {
   position: relative;
   width: 370px;
   height: 294px;
-}
-
-.galery__item:last-child {
-  margin-right: 0;
 }
 
 .galery__title {
@@ -486,24 +506,20 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-
-.socials__link:hover,
-.socials__link:focus {
+.socials__link:hover, .socials__link:focus {
   background-color: #2196f3;
   border-radius: 50%;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials__link:hover .socials__icon,
-.socials__link:focus .socials__icon {
-  fill: #ffffff;
+.socials__icon {
+  fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.socials__icon {
-  fill: #afb1b8;
+.socials__link:hover .socials__icon, .socials__link:focus .socials__icon {
+  fill: #ffffff;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -536,8 +552,7 @@
           align-items: center;
 }
 
-.clients__meta:hover,
-.clients__meta:focus {
+.clients__meta::hover, .clients__meta:focus {
   border-color: #2196f3;
 }
 
@@ -559,9 +574,7 @@
   -webkit-transition: border-color 250ms linear, cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms linear, cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients__link:hover,
-.clients__link:focus {
+.clients__link:hover, .clients__link:focus {
   border-color: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -575,9 +588,7 @@
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
+.clients__link:hover .clients__icon, .clients__link:focus .clients__icon {
   fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -615,20 +626,6 @@
   overflow: hidden;
 }
 
-.site-filters__button:hover,
-.site-filters__button:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  cursor: pointer;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .site-filters__button {
   text-align: center;
   -webkit-box-align: center;
@@ -648,6 +645,18 @@
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.site-filters__button:hover, .site-filters__button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .card-set__wrapper {
   display: -webkit-box;
@@ -663,13 +672,6 @@
   width: calc((100% - 60px) / 3);
 }
 
-.card-set__link:hover,
-.card-set__link:focus {
-  display: block;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .card-set__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -677,7 +679,6 @@
   position: relative;
   overflow: hidden;
 }
-
 .card-set__box::before {
   content: "";
   display: inline-block;
@@ -692,13 +693,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
 }
-
 .card-set__link:hover .card-set__box::before {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.card-set__link:hover .card-set__thumb {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
@@ -715,6 +710,10 @@
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-set__link:hover .card-set__thumb {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .card-set__desc {
@@ -736,6 +735,11 @@
 
 .card-set__link {
   text-decoration: none;
+}
+.card-set__link:hover, .card-set__link:focus {
+  display: block;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-set__title {
@@ -804,9 +808,7 @@
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.socials-footer__link:hover,
-.socials-footer__link:focus {
+.socials-footer__link:hover, .socials-footer__link:focus {
   background-color: #2196f3;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -853,9 +855,7 @@
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.mailing-footer__input:hover,
-.mailing-footer__input:focus {
+.mailing-footer__input:hover, .mailing-footer__input:focus {
   color: #ffffff;
   border-color: #2196f3;
   outline: none;
@@ -1136,47 +1136,4 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  background-color: #ffffff;
-  color: #757575;
-}
-
-p,
-a,
-h1,
-h2,
-h3,
-h4 {
-  margin: 0 0;
-}
-
-ul {
-  margin: 0 0;
-  padding-left: 0;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-/* удалення крапочок напроти пунктів списку */
-ul {
-  list-style: none;
-}
-
-.container {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
 }/*# sourceMappingURL=main.css.map */
