--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,12 +14,12 @@
   border-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-}
 
-.promo__button:hover,
-.promo__button:focus {
-  background-color: $buttom-secondary-color;
-  color: $color-text-promo;
+  &:hover,
+  &:focus {
+    background-color: $buttom-secondary-color;
+    color: $color-text-promo;
+  }
 }
 
 .footer-button__btn {
@@ -46,12 +46,12 @@
   cursor: pointer;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-button__btn:hover,
-.footer-button__btn:focus {
-  background-color: $buttom-secondary-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: $buttom-secondary-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
