--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -4,18 +4,6 @@
   gap: 30px;
 }
 
-.contacts-header__link:hover,
-.contacts-header__link:focus {
-  color: $accent-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-header__link:hover .header-contacts-icon,
-.contacts-header__link:focus .header-contacts-icon {
-  fill: $accent-color;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contacts-header__link {
   display: block;
   display: flex;
@@ -32,6 +20,12 @@
 
   color: $primary-color-text;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .contacts-header__icon {
@@ -43,26 +37,19 @@
   margin-bottom: 9px;
 }
 
-.contact-footer__adress:hover,
-.contact-footer__adress:focus {
-  background-color: $color-bg-promo-footer;
-  color: $accent-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contact-footer__adress {
   text-decoration: none;
   font-style: normal;
   line-height: 1.71;
   color: $footer-primary-text-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contact-footer__link:hover,
-.contact-footer__link:focus {
-  background-color: $color-bg-promo-footer;
-  color: $accent-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: $color-bg-promo-footer;
+    color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .contact-footer__link {
@@ -73,4 +60,11 @@
   font-style: normal;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $color-bg-promo-footer;
+    color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
