--- a/sass/components/_peage-footer.scss
+++ b/sass/components/_peage-footer.scss
@@ -37,13 +37,14 @@
   border-radius: 50%;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.socials-footer__link:hover,
-.socials-footer__link:focus {
-  background-color: $accent-color;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .socials-footer__icon {
   width: 20px;
@@ -83,12 +84,13 @@
   border-radius: 4px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    border-color: $accent-color;
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.mailing-footer__input:hover,
-.mailing-footer__input:focus {
-  color: #ffffff;
-  border-color: $accent-color;
-  outline: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
