--- a/sass/components/_portfolio-main.scss
+++ b/sass/components/_portfolio-main.scss
@@ -27,18 +27,6 @@
   overflow: hidden;
 }
 
-.site-filters__button:hover,
-.site-filters__button:focus {
-  background-color: $accent-color;
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  cursor: pointer;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .site-filters__button {
   text-align: center;
   align-items: center;
@@ -55,6 +43,18 @@
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .card-set__wrapper {
@@ -68,38 +68,26 @@
   width: calc((100% - 60px) / 3);
 }
 
-.card-set__link:hover,
-.card-set__link:focus {
-  display: block;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .card-set__box {
   display: flex;
   position: relative;
   overflow: hidden;
-}
 
-.card-set__box::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  &::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
-  transform: translateY(101%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  background-color: rgba(33, 150, 243, 0.9);
-}
-
-.card-set__link:hover .card-set__box::before {
-  transform: translateY(0);
-}
-
-.card-set__link:hover .card-set__thumb {
-  transform: translateY(0);
+    background-color: rgba(33, 150, 243, 0.9);
+  }
+  .card-set__link:hover &::before {
+    transform: translateY(0);
+  }
 }
 
 .card-set__thumb {
@@ -111,6 +99,10 @@
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .card-set__link:hover & {
+    transform: translateY(0);
+  }
 }
 
 .card-set__desc {
@@ -135,6 +127,13 @@
 
 .card-set__link {
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    display: block;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .card-set__title {
