--- a/sass/components/_site-menu.scss
+++ b/sass/components/_site-menu.scss
@@ -7,24 +7,18 @@
 
 .site-menu--current {
   position: relative;
-}
 
-.site-menu--current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: $accent-color;
-}
-
-.site-menu__link:hover,
-.site-menu__link:focus {
-  color: $accent-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: $accent-color;
+  }
 }
 
 .site-menu__link {
@@ -40,14 +34,20 @@
 
   color: $color-nav;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .site-menu__item {
   margin-right: 50px;
-}
 
-.site-menu__item:last-child {
-  margin-right: 0;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .site-menu--current {
