--- a/sass/components/_studio-main.scss
+++ b/sass/components/_studio-main.scss
@@ -45,6 +45,10 @@
 .features-card {
   flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .features__box {
@@ -81,10 +85,6 @@
   line-height: 1.71;
 }
 
-.features__card:last-child {
-  margin-right: 0;
-}
-
 .galery__wrapper {
   padding-bottom: 94px;
 }
@@ -92,16 +92,16 @@
 .galery__item {
   gap: 30px;
   display: flex;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .galery__icon {
   position: relative;
   width: 370px;
   height: 294px;
-}
-
-.galery__item:last-child {
-  margin-right: 0;
 }
 
 .galery__title {
@@ -207,24 +207,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.socials__link:hover,
-.socials__link:focus {
-  background-color: $accent-color;
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.socials__link:hover .socials__icon,
-.socials__link:focus .socials__icon {
-  fill: $secondary-color-socials;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .socials__icon {
   fill: $primary-color-socials-clients;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .socials__link:hover &,
+  .socials__link:focus & {
+    fill: $secondary-color-socials;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .clients__wrapper {
@@ -251,9 +251,11 @@
   align-items: center;
 }
 
-.clients__meta:hover,
-.clients__meta:focus {
-  border-color: $accent-color;
+.clients__meta {
+  &::hover,
+  &:focus {
+    border-color: $accent-color;
+  }
 }
 
 .clients__link {
@@ -267,12 +269,12 @@
   justify-content: center;
 
   transition: border-color 250ms linear, cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients__link:hover,
-.clients__link:focus {
-  border-color: $accent-color;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: $accent-color;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .clients__icon {
@@ -281,10 +283,10 @@
   height: 60px;
   fill: $primary-color-socials-clients;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-  fill: $accent-color;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .clients__link:hover &,
+  .clients__link:focus & {
+    fill: $accent-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
